<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <Button
        android:id="@+id/add_task"
        android:layout_width="40dp"
        android:layout_margin="12dp"
        android:layout_height="40dp"
        android:background="@drawable/add_icon"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="98dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:background="@drawable/backgr_item" />

    <io.gloxey.cfv.CFTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:text="@string/title_tasks"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="38sp"
        app:font_name="banch.ttf" />

    <android.support.design.widget.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginTop="3dp"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabIndicatorHeight="6dp"
        app:tabSelectedTextColor="#000"
        app:tabTextColor="#000">

        <android.support.design.widget.TabItem
            android:id="@+id/pending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending" />

        <android.support.design.widget.TabItem
            android:id="@+id/in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress" />

        <android.support.design.widget.TabItem
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/v_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tabs"
        android:layout_marginTop="10dp" />
</RelativeLayout>