<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/add_toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:src="@drawable/avatar" />

    <io.gloxey.cfv.CFEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/avatar"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/project_name_title"
        android:inputType="text"
        android:padding="5dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <io.gloxey.cfv.CFEditText
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input"
        android:ems="10"
        android:focusableInTouchMode="true"
        android:hint="@string/desc_proj"
        android:inputType="text|textMultiLine|textCapSentences"
        android:padding="5dp"
        android:textColor="#000"
        android:textSize="20sp" />

    <io.gloxey.cfv.CFButton
        android:id="@+id/create_proj"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimary"
        android:text="Готово"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:font_name="banch.ttf" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/add_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:translationZ="4dp">

        <io.gloxey.cfv.CFTextView
            android:id="@+id/my_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/create_project"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="25dp"
            app:font_name="banch.ttf"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="11dp" />

    </android.support.v7.widget.Toolbar>

</RelativeLayout>